--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,6 +6,7 @@
     z-index: 100;
     border-radius: 10px;
     border: 1px solid rgb(191, 239, 250);
+    overflow: hidden;
 }
 
 .inner-div{
@@ -26,3 +27,27 @@
     z-index: 900;
 }
 
+.resize-handle {
+    position: absolute;
+    width: 12px;
+    height: 15px;
+    background-color: #007bff; /* You can adjust the color */
+    
+  }
+  
+  .right-resize {
+    top: 50%;
+    right: 0;
+    transform: translate(50%, -50%);
+    cursor: ew-resize;
+  }
+  
+  .bottom-resize {
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    cursor: ns-resize;
+  }
+
+ 
+  
