--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,8 +1,11 @@
 .outer-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 600px;
   height: 650px;
   background-color: rgb(222, 252, 252);
-  position: relative;
+  position: fixed;
   z-index: 100;
   border-radius: 10px;
   border: 1px solid rgb(191, 239, 250);
@@ -14,7 +17,7 @@
   height: 50px;
   background-color: blueviolet;
   position: absolute;
-  cursor: move;
+  cursor: grab;
   z-index: 200;
 }
 
@@ -45,5 +48,19 @@
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 50%);
+  cursor: ns-resize;
+}
+
+.left-resize {
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, 50%);
+  cursor: ew-resize;
+}
+
+.top-resize {
+  top: 0;
+  left: 50%;
+  transform: translate(50%, -50%);
   cursor: ns-resize;
 }
