--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,13 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 600px;
-  height: 650px;
+  width: 500px;
+  height: 400px;
   background-color: rgb(222, 252, 252);
   position: fixed;
   z-index: 100;
-  /* border-radius: 10px; */
-  border: 1px solid rgb(191, 239, 250);
+  border-radius: 10px;
+  border: 2px solid rgb(191, 239, 250);
   overflow: hidden;
 }
 
@@ -32,7 +32,7 @@
 
 .resize-handle {
   position: absolute;
-  width: 32px;
+  width: 24px;
   height: 25px;
   background-color: #007bff;
 }
