--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,7 +8,7 @@
   position: fixed;
   z-index: 100;
   border-radius: 10px;
-  border: 2px solid rgb(191, 239, 250);
+  /* border: 2px solid rgb(191, 239, 250); */
   overflow: hidden;
 }
 
