--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,66 +1,99 @@
-.outer-div {
+.container {
+  width: 600px;
+  height: 650px;
+  background-color: rgb(222, 252, 252);
+  position: absolute;
+  border-radius: 6px;
+  overflow: hidden;
+  border: 8px solid rgb(191, 239, 250);
+  border-radius: 5px;
+}
+.top-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  cursor: nwse-resize;
+}
+.top {
+  position: absolute;
+  top: 0;
+  left: 5%;
+  width: 90%;
+  height: 10px;
+  cursor: ns-resize;
+}
+.top-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 10px;
+  height: 10px;
+  cursor: nesw-resize;
+}
+.right {
+  position: absolute;
+  top: 5%;
+  right: 0;
+  width: 10px;
+  height: 90%;
+  cursor: ew-resize;
+}
+.bottom-right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 10px;
+  height: 10px;
+  cursor: nwse-resize;
+}
+.bottom {
+  position: absolute;
+  bottom: 0;
+  left: 5%;
+  width: 90%;
+  height: 10px;
+  cursor: ns-resize;
+}
+.bottom-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  cursor: nesw-resize;
+}
+.left {
+  position: absolute;
+  top: 5%;
+  left: 0;
+  width: 10px;
+  height: 90%;
+  cursor: ew-resize;
+}
+.drag-handle {
+  height: 20px;
+  width: 20px;
+  cursor: grab;
+  border: 1px solid transparent;
+  transition: 0.1s ease-in-out;
+  border-radius: 3px;
+  right: 20px;
+  top: 20px;
+  position: absolute;
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 500px;
-  height: 400px;
-  background-color: rgb(222, 252, 252);
-  position: fixed;
-  z-index: 100;
-  border-radius: 10px;
-  /* border: 2px solid rgb(191, 239, 250); */
-  overflow: hidden;
+  justify-content: space-evenly;
+  padding: 5px;
 }
-
+.drag-handle:hover {
+  transform: scale(1.1);
+}
 .inner-div {
-  width: 100px;
   height: 100px;
+  width: 100px;
   background-color: blueviolet;
   position: absolute;
-  cursor: grab;
-  z-index: 200;
-}
-
-.tooltip {
-  position: fixed;
-  background-color: rgb(72, 72, 82);
-  color: #ffffff;
-  padding: 5px;
-  border-radius: 5px;
-  z-index: 900;
-}
-
-.resize-handle {
-  position: absolute;
-  width: 24px;
-  height: 25px;
-  background-color: #007bff;
-}
-
-.right-resize {
-  top: 50%;
-  right: 0;
-  transform: translate(50%, -50%);
-  cursor: ew-resize;
-}
-
-.bottom-resize {
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 50%);
-  cursor: ns-resize;
-}
-
-.left-resize {
-  top: 50%;
-  left: 0;
-  transform: translate(-50%, 50%);
-  cursor: ew-resize;
-}
-
-.top-resize {
-  top: 0;
-  left: 50%;
-  transform: translate(50%, -50%);
-  cursor: ns-resize;
+  cursor:grab;
 }
